--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@tensorflow-models/posenet": "^2.2.1",
     "@tensorflow/tfjs": "^1.5.2",
     "ngx-webcam": "^0.2.6",
     "rxjs": "~6.4.0",
